hard-gists/939252/run.log
=== Docker Run Log for 939252 ===
Started at: Mi 29. Okt 18:24:14 CET 2025

[2025-10-29 18:24:14] START: Running container for 939252
[2025-10-29 18:24:14] SUCCESS: Container c49d174f590aad1b53a3aa2c93088aad57b38f76ac83be3bb37811f54f37982e started for 939252
=== Container logs for 939252 ===
  File "/snippet.py", line 22
    print len(iconMap)
    ^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 939252 ===
[2025-10-29 18:24:16] INFO: Container c49d174f590aad1b53a3aa2c93088aad57b38f76ac83be3bb37811f54f37982e has stopped
